--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "vertical-stepper-nav": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
