--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@vercel/analytics": "^0.1.6",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
