--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@vercel/analytics": "^0.1.6",
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "eslint-config-next": "^13.4.5",
+    "next": "^13.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vertical-stepper-nav": "^1.0.2"
   },
   "devDependencies": {
+    "@types/node": "20.3.0",
     "@types/react": "^17.0.3",
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.9",
-    "tailwindcss": "^2.1.1",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.2.4"
   }
 }
