--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@vercel/analytics": "^0.1.6",
     "eslint-config-next": "^13.4.5",
+    "framer-motion": "^10.12.16",
     "next": "^13.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vertical-stepper-nav": "^1.0.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.3.0",
