--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^10.12.16",
     "next": "^13.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.4"
   },
   "devDependencies": {
     "@types/node": "20.3.0",
