--- a/configs/projects.json
+++ b/configs/projects.json
@@ -1,5 +1,29 @@
 [
     {
+        "name": "Pictioner",
+        "description": "Pictioner is a fun guessing game where users need to guess what GPT draws on the canvas within three tries. Users proceed to next rounds as they keep guessing things right or are eliminated when they get a guess wrong. Be ready for endless fun! Pictioner was featured on Product Hunt in May 2023.",
+        "link": [
+            {
+                "url": "https://www.pictioner.com",
+                "iconType": "paperclip"
+            },
+            {
+                "url": "https://www.producthunt.com/products/pictioner",
+                "iconType": "paperclip"
+            }
+        ]
+    },
+    {
+        "name": "Hello Cody: A Voice Assistant for VS Code",
+        "description": "Built as part of Microsoft's internal 'Global Hackathon' where the project won the first place in the developer productivity challenge, this project is now part of GitHub Copilot X. My contributions included initiating the project, pitching to Microsoft and GitHub execs to get buy-in and then collaborating with the GitHub Next team to make it a reality. The project also led to multiple patent filings.",
+        "link": [
+            {
+                "url": "https://githubnext.com/projects/copilot-voice/",
+                "iconType": "github"
+            }
+        ]
+    },
+    {
         "name": "Course: Alexa 101, Designing Voice Apps for Alexa",
         "description": "An interactive course that teaches learners how to build voice apps for Alexa using practical examples and projects. Made in collaboration with Educative.",
         "link": [
@@ -39,7 +63,7 @@
     },
     {
         "name": "Resolution Tracker",
-        "description": "An Amazon Alexa Skill that helps keep track of your new year resolutions and helps tweet your progress to your followers.",
+        "description": "An Amazon Alexa Skill that helps keep track of your new year resolutions and helps tweet your progress to your followers. Resolution Tracker was awarded 'Skill of the month' in December 2017 by Amazon.",
         "link": [
             {
                 "url": "https://www.amazon.com/Priyankar-Kumar-Resolution-Tracker/dp/B078HHJHF5/ref=sr_1_3?dchild=1&keywords=resolution+tracker&qid=1618128208&s=digital-skills&sr=1-3",
@@ -49,7 +73,7 @@
     },
     {
         "name": "Trivia Quest",
-        "description": "An Amazon Alexa game to test your wits and climb on top of a global leaderboard.",
+        "description": "An Amazon Alexa game to test your wits and climb on top of a global leaderboard! Trivia Quest has been played by thousands of Alexa users from around the world and has been rated 3.2/5 on Amazon.",
         "link": [
             {
                 "url": "https://www.amazon.com/Invoke-Genie-Trivia-Quest/dp/B07MKPRVPB/ref=sr_1_1?dchild=1&keywords=trivia+quest+alexa&qid=1618128305&sr=8-1",
