--- a/configs/projects.json
+++ b/configs/projects.json
@@ -20,6 +20,22 @@
             {
                 "url": "https://githubnext.com/projects/copilot-voice/",
                 "iconType": "github"
+            },
+            {
+                "url": "https://www.linkedin.com/posts/priyankarkumar_microsoft-global-hackathon-2021-challenge-activity-6874799793026162688-t_O-?utm_source=share&utm_medium=member_desktop",
+                "iconType": "linkedin"
+            },
+            {
+                "url": "https://www.linkedin.com/feed/update/urn:li:activity:6943560723843158016?utm_source=share&utm_medium=member_desktop",
+                "iconType": "linkedin"
+            },
+            {
+                "url": "https://twitter.com/pandita_rahul/status/1590402324169912323",
+                "iconType": "twitter"
+            },
+            {
+                "url": "https://twitter.com/oegerikus/status/1590404812331704327",
+                "iconType": "twitter"
             }
         ]
     },
